# unittest-xml-reporting

./: .coveragerc  .gitignore  .landscape.yml  .travis.yml  MANIFEST.in  Makefile  README  README.markdown  README.md  README.rst  django_xmlrunner.py  fabfile.py  pyproject.toml  release.sh  requirements.txt  setup.cfg  setup.py  tox.ini  xmlrunner.py  xmlrunner_tests.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tests.yml
docs/: Makefile  conf.py  index.rst
examples/: django.py  django_xmlrunner.py  simple.py
src/xmlrunner/: .__init__.py.swp  __init__.py  __main__.py  composite.py  result.py  runner.py  unittest.py  version.py
src/xmlrunner/extra/: djangotestrunner.py
src/xmlrunner/tests/: builder_test.py  testsuite.py  testsuite_cases.py
test/fixtures/: errord_test_case.xml  failed_test_case.xml  mixed_test_case.xml  successful_test_case.xml
tests/: __init__.py  builder_test.py  composite_test.py  diagnostics_test.py  discovery_test.py  django_test.py  doctest_example.py  fixture.py  main_test.py  result_test.py  testsuite.py
tests/django_example/: manage.py
tests/django_example/app/: tests.py
tests/fixtures/: errord_test_case.xml  failed_test_case.xml  mixed_test_case.xml  successful_test_case.xml
xmlrunner/: __init__.py  __main__.py  builder.py  composite.py  result.py  runner.py  time.py  unittest.py  version.py  xmlrunner.py
xmlrunner/allure_report/: hook.py  listener.py  utils.py
xmlrunner/extra/: diagnosticstestrunner.py  djangotestrunner.py  xunit_plugin.py
xmlrunner/tests/: testsuite.py  testsuite_cases.py
(+17 files in other folders)
